--- a/blog/src/main/resources/templates/includes/navbar.html
+++ b/blog/src/main/resources/templates/includes/navbar.html
@@ -1,9 +1,7 @@
 <div th:fragment="navbar">
    <div class="container mb-5 pb-5">
-      <nav              class="navbar navbar-expand-lg navbar-light bg-dark fixed-top"
-              id="mainNav"
-      >
-         <a class="navbar-brand" href="#">BLOG CK</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" id="mainNav">
+         <a class="navbar-brand" href="/">BLOG CK</a>
          <button
                  class="navbar-toggler"
                  type="button"
@@ -15,19 +13,16 @@
          >
             <span class="navbar-toggler-icon"></span>
          </button>
-         <div
-                 class="collapse navbar-collapse w-100 justify-content-center"
-                 id="navbarNavDropdown"
-         >
+         <div class="collapse navbar-collapse w-100 justify-content-center" id="navbarNavDropdown">
             <ul class="navbar-nav d-flex flex-row align-items-center">
                <!-- PARA TODOS -->
                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home </a>
+                  <a class="nav-link" href="/">Home </a>
                </li>
 
                <!-- EXCLUSIVO PARA ADMINS E AUTORES -->
                <li class="nav-item">
-                  <a class="nav-link" href="/criar">Novo Post</a>
+                  <a class="nav-link" href="/criarpost">Novo Post</a>
                </li>
 
                <!-- PARA USUÁRIOS DESLOGADOS -->
@@ -46,8 +41,8 @@
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdownMenuLink"
                   >
-                     <a class="dropdown-item" href="#">Login</a>
-                     <a class="dropdown-item" href="#">Cadastrar</a>
+                     <a class="dropdown-item" href="/login">Login</a>
+                     <a class="dropdown-item" href="/cadastrar">Cadastrar</a>
                   </div>
                </li>
 
@@ -67,7 +62,7 @@
                           class="dropdown-menu"
                           aria-labelledby="navbarDropdownMenuLink"
                   >
-                     <a class="dropdown-item" href="#">Editar perfil</a>
+                     <a class="dropdown-item" href="/editarperfil">Editar perfil</a>
                      <a class="dropdown-item" href="#">Sair</a>
                   </div>
                </li>
