--- a/blog/src/main/resources/templates/criarpost.html
+++ b/blog/src/main/resources/templates/criarpost.html
@@ -16,86 +16,69 @@
           <div class="card">
             <!-- Card header -->
             <div class="card-header">Informações do post</div>
-            <!-- Card body -->
-            <div class="card-body">
-              <form action="#" class="pt-2">
-                <!-- Title of the post -->
-                <div class="form-group">
-                  <label class="col-lg-3 control-label">Título do post:</label>
-                  <div class="col-lg-8">
-                    <input
+            <form action="#" method="POST" class="pt-2">
+              <!-- Card body -->
+              <div class="card-body">
+
+                  <!-- Title of the post -->
+                  <div class="form-group">
+                    <label class="col-lg-3 control-label">Título do post:</label>
+                    <div class="col-lg-8">
+                      <input
+                        class="form-control"
+                        type="text"
+                        name="titulo"
+                        placeholder="Ex.: Como fazer css bonitinho"
+                      />
+                    </div>
+                  </div>
+
+                  <!-- Theme selector -->
+                  <div class="form-group">
+                    <label>Categoria:</label>
+                    <div class="col-lg-8">
+                      <select class="form-control" name="categoria">
+                        <option selected>Selecione uma categoria</option>
+                        <option>Tema 1</option>
+                        <option>Tema 2</option>
+                        <option>Tema 3</option>
+                        <option>Tema 4</option>
+                        <option>Tema 5</option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <!-- Textarea for post content using ck editor -->
+                  <div class="form-group">
+                    <label>Digite o conteúdo do seu post:</label>
+                    <textarea
                       class="form-control"
-                      type="text"
-                      name="title"
-                      placeholder="Ex.: Como fazer css bonitinho"
-                    />
+                      name="conteudo"
+                      id="textarea"
+                    ></textarea>
                   </div>
-                </div>
 
-                <!-- Theme selector -->
-                <div class="form-group">
-                  <label>Tema:</label>
-                  <div class="col-lg-8">
-                    <select class="form-control" name="theme">
-                      <option selected>Selecione um tema</option>
-                      <option>Tema 1</option>
-                      <option>Tema 2</option>
-                      <option>Tema 3</option>
-                      <option>Tema 4</option>
-                      <option>Tema 5</option>
-                    </select>
+                  <!-- Post photo container -->
+                  <div class="form-group">
+                    <label class="mb-3">Foto do post:</label></br>
+                    <input type="file" name="image" accept="image/png, image/jpeg" />
+
+                    <!-- Card footer -->
+                    <div class="mt-3">
+                      <img src="https://c.tenor.com/Q823-830Ri0AAAAd/christian-bale-american-psycho.gif" width="200"
+                        height="200" alt="avatar" />
+                    </div>
                   </div>
-                </div>
 
-                <!-- Textarea for post content using ck editor -->
-                <div class="form-group">
-                  <label>Digite o conteúdo do seu post:</label>
-                  <textarea
-                    class="form-control"
-                    name="text"
-                    id="textarea"
-                  ></textarea>
-                </div>
-              </form>
-            </div>
-            <!-- Card footer -->
-            <div class="card-footer pb-3 pt-3">
-              <button type="submit" name="Postar" class="btn btn-success">
-                Postar
-              </button>
-            </div>
-          </div>
-        </div>
+              </div>
 
-        <!-- Post photo container -->
-        <div class="col-md-4">
-          <div class="card">
-            <!-- Card header -->
-            <div class="card-header">Foto do post</div>
-            <!-- Card body -->
-            <div class="card-body text-center">
-              <img
-                src="https://c.tenor.com/Q823-830Ri0AAAAd/christian-bale-american-psycho.gif"
-                class=""
-                width="200"
-                height="200"
-                alt="avatar"
-              />
-            </div>
-            <!-- Card footer -->
-            <div class="card-footer text-center">
-              <form
-                action="#"
-                method="post"
-                enctype="multipart/form-data"
-                class=""
-              >
-                <input type="file" name="file" class="form-control btn" />
-                <button type="submit" class="btn btn-success" name="submit">
-                  Enviar foto
+              <!-- Card footer -->
+              <div class="card-footer pb-3 pt-3">
+                <button type="submit" name="Postar" class="btn btn-success">
+                  Postar
                 </button>
-              </form>
-            </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
