--- a/blog/src/main/resources/templates/index.html
+++ b/blog/src/main/resources/templates/index.html
@@ -33,8 +33,8 @@
   
               <!-- Post footer -->
               <div class="card-footer pb-2 pt-2">
-                <a href='#' class="btn btn-danger">Apagar &rarr;</a>
-                <a href='#' class="btn btn-warning">Editar &rarr;</a>
+                <a href='#' class="btn btn-danger" th:if="${info_usuario != null && info_usuario.perfilAcesso.tipo != null && info_usuario.perfilAcesso.tipo == 'Admin'}">Apagar &rarr;</a>
+                <a href='#' class="btn btn-warning" th:if="${info_usuario != null && info_usuario.perfilAcesso.tipo != null && info_usuario.perfilAcesso.tipo == 'Admin'}">Editar &rarr;</a>
                 <a th:href="@{'/post/' + ${post.idPost}}" class="btn btn-primary">Ler &rarr;</a>
               </div>
             </article> 
