--- a/blog/src/main/resources/templates/readpost.html
+++ b/blog/src/main/resources/templates/readpost.html
@@ -48,17 +48,22 @@
                     <div class="card bg-light">
                         <div class="card-body">
                             <!-- Comment form-->
-                            <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
-                           <!-- Single comment-->                            
+                            <form class="mb-4" action="/comentario/insert" method="POST">
+                                <div th:each="p : ${post}">
+                                    <input type="text" name="idPost" th:value="${p.idPost}" hidden>
+                                </div>
+                                <textarea name="comentario" class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+                                <button type="submit" class="btn btn-primary mt-3">Inserir comentario</button>
+                            </form>
+                           <hr />                          
                            <div th:each="comentario : ${comentarios}">
-                            <div class="d-flex">
-                                <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                            <div class="d-flex mt-4">
+                                <div class="flex-shrink-0">
+                                    <img class="rounded-circle" style="width: 50px; height: 50px" th:src="@{${comentario.usuario != null && comentario.usuario.foto != null ? '/usuario-fotos/' + comentario.usuario.foto : '/usuario-fotos/default.png' }}"  />
+                                </div>
                                 <div class="ms-3">
-                                    <div 
-                                    th:text="${comentario.usuario.perfilAcesso.tipo}" 
-                                    th:class="${#strings.equals(comentario.usuario.perfilAcesso.tipo, 'Admin')} ? 'fw-bold rainbow' : 'fw-bold'"
-                                    ></div>
-                                    <p th:utext="${comentario.comentario}"></p>
+                                    <div th:text="${comentario.usuario.nome}" th:class="${#strings.equals(comentario.usuario.perfilAcesso.tipo, 'Admin')} ? 'fw-bold rainbow' : 'fw-bold'"></div>
+                                    <th:block th:text="${comentario.comentario}"></th:block>
                                 </div>
                             </div>
                         </div>
